--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-pdftotext": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
