--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.19.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.424.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
@@ -17,7 +22,9 @@
     "pdfjs-dist": "^4.5.136",
     "react": "^18",
     "react-dom": "^18",
-    "react-pdftotext": "^1.3.0"
+    "react-pdftotext": "^1.3.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
