--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.4.0
+beanie==1.26.0
 blinker==1.8.2
 cachetools==5.4.0
 certifi==2024.7.4
@@ -29,9 +30,11 @@ httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lazy-model==0.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+motor==3.5.1
 proto-plus==1.24.0
 protobuf==4.25.4
 pyasn1==0.6.0
@@ -39,6 +42,7 @@ pyasn1_modules==0.4.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pymongo==4.8.0
 pyparsing==3.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
@@ -50,6 +54,7 @@ shellingham==1.5.4
 smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
+toml==0.10.2
 tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.2
