--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+aiohappyeyeballs==2.3.4
+aiohttp==3.10.0
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+attrs==24.1.0
 beanie==1.26.0
 blinker==1.8.2
 cachetools==5.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+distro==1.9.0
 dnspython==2.6.1
+docstring_parser==0.16
 email_validator==2.2.0
 fastapi==0.112.0
 fastapi-cli==0.0.5
 Flask==3.0.3
+frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.6
@@ -28,13 +35,17 @@ httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+instructor==1.3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jiter==0.4.2
 lazy-model==0.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 motor==3.5.1
+multidict==6.0.5
+openai==1.38.0
 proto-plus==1.24.0
 protobuf==4.25.4
 pyasn1==0.6.0
@@ -54,6 +65,7 @@ shellingham==1.5.4
 smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
+tenacity==8.5.0
 toml==0.10.2
 tqdm==4.66.4
 typer==0.12.3
@@ -65,3 +77,4 @@ uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
 Werkzeug==3.0.3
+yarl==1.9.4
