--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,10 @@ docstring_parser==0.16
 email_validator==2.2.0
 fastapi==0.112.0
 fastapi-cli==0.0.5
+filelock==3.15.4
 Flask==3.0.3
 frozenlist==1.4.1
+fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.6
@@ -34,18 +36,25 @@ httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
+huggingface-hub==0.24.5
 idna==3.7
 instructor==1.3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jiter==0.4.2
+joblib==1.4.2
 lazy-model==0.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 motor==3.5.1
+mpmath==1.3.0
 multidict==6.0.5
+networkx==3.3
+numpy==2.0.1
 openai==1.38.0
+packaging==24.1
+pillow==10.4.0
 proto-plus==1.24.0
 protobuf==4.25.4
 pyasn1==0.6.0
@@ -58,16 +67,27 @@ pyparsing==3.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
+sentence-transformers==3.0.1
+setuptools==72.1.0
 shellingham==1.5.4
 smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
+sympy==1.13.1
 tenacity==8.5.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
 toml==0.10.2
+torch==2.4.0
 tqdm==4.66.4
+transformers==4.43.3
 typer==0.12.3
 typing_extensions==4.12.2
 uritemplate==4.1.1
