--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.5",
     "lucide-react": "^0.424.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
